@@ -1,0 +1,27 @@
+exclude:
+  - 'node_modules/**'
+
+linters:
+  VendorPrefix:
+    enabled: false
+
+  IdSelector:
+    enabled: false
+
+  ImportantRule:
+    enabled: false
+
+  SelectorFormat:
+    enabled: false
+
+  SelectorDepth:
+    enabled: false
+
+  QualifyingElement:
+    enabled: false
+
+  PseudoElement:
+    enabled: false
+
+  DuplicateProperty:
+    enabled: false
