@@ -6,6 +6,10 @@ php:
     - 7.0
     - hhvm
 
+before_install:
+    - gem install sass
+
+
 before_script:
     - touch database/database.sqlite
     - travis_retry composer self-update
@@ -15,6 +19,7 @@ before_script:
     - php artisan key:generate
 
 script:
+    - "tests/travis/scss.rb"
     - vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
