@@ -1,0 +1,8 @@
+// Colors
+$red: #c23b22;
+$white-gray: #eee;
+$light-gray: #cfcfc4;
+$gray: #85857e;
+$gray-light: #b0b1b3;
+$green: #008000;
+$black: #000;
