@@ -13,4 +13,5 @@
 [Service Status - 52] Implement Laravel debugbar.
 [Service Status - 53] Set links to the incidents navbar section.
 [Service Status - 54] Change css in layout blade to external file.
-[Service Status - 56] Remove node_modules and add it to .gitignore
+[Service Status - 56] Remove node_modules and add it to .gitignore.
+[Service Status - 58] Implement css-linting.
